add talk section

--- a/guide.html
+++ b/guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Nov 29 2019 20:20:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 03 2019 08:03:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5de10a435f1762049225eb14" data-wf-site="5ddff9f664e4a60d9ad54343">
 <head>
   <meta charset="utf-8">
@@ -74,6 +74,20 @@ img {
   .btn.btn--ang:hover:before {
     width: 100%;
   }
+}
+.talk + .talk {
+  margin-top: 200px;
+}
+.speaker + .speech {
+  margin-top: 72px;
+}
+@media (min-width: 767px) {
+  .talk + .talk {
+    margin-top: 96px;
+  }
+  .speaker + .speech {
+    margin-top: 40px;
+  } 
 }
 </style>
   </div>
