all the sections

--- a/guide.html
+++ b/guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Dec 03 2019 13:49:29 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Dec 04 2019 11:43:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5de10a435f1762049225eb14" data-wf-site="5ddff9f664e4a60d9ad54343">
 <head>
   <meta charset="utf-8">
@@ -99,6 +99,57 @@ img {
   <a href="#" class="btn btn--ang w-inline-block">
     <div class="btn__text">Attend Now</div><img src="images/cta_arrow_ic.svg" alt="" class="btn__ic"></a>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+  <div class="section">
+    <div class="container">
+      <div class="subscribe subscribe--ang w-form">
+        <div class="subscribe__content">
+          <h1>Subscribe</h1>
+          <p class="subscribe__desc">never miss a meetup again!</p>
+        </div>
+        <form id="email-form" name="email-form" data-name="Email Form" class="subscribe__form"><input type="email" class="subscribe__input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="Enter your email" id="Email-2" required=""><input type="submit" value=" " class="subscribe__btn w-button"></form>
+        <div class="subscribe__success w-form-done">
+          <div>Thank you! Your submission has been received!</div>
+        </div>
+        <div class="w-form-fail">
+          <div>Oops! Something went wrong while submitting the form.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="container">
+      <div class="subscribe subscribe--react w-form">
+        <div class="subscribe__content">
+          <h1 class="subscribe__h-dark">Subscribe</h1>
+          <p class="subscribe__desc subscribe__dark">never miss a meetup again!</p>
+        </div>
+        <form id="email-form" name="email-form" data-name="Email Form" class="subscribe__form"><input type="email" class="subscribe__input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="Enter your email" id="Email-2" required=""><input type="submit" value=" " class="subscribe__btn w-button"></form>
+        <div class="subscribe__success subscribe__success--dark w-form-done">
+          <div>Thank you! Your submission has been received!</div>
+        </div>
+        <div class="w-form-fail">
+          <div>Oops! Something went wrong while submitting the form.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="container">
+      <div class="subscribe subscribe--react-vue w-form">
+        <div class="subscribe__content">
+          <h1>Subscribe</h1>
+          <p class="subscribe__desc">never miss a meetup again!</p>
+        </div>
+        <form id="email-form" name="email-form" data-name="Email Form" class="subscribe__form"><input type="email" class="subscribe__input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="Enter your email" id="Email-2" required=""><input type="submit" value=" " class="subscribe__btn w-button"></form>
+        <div class="subscribe__success w-form-done">
+          <div>Thank you! Your submission has been received!</div>
+        </div>
+        <div class="w-form-fail">
+          <div>Oops! Something went wrong while submitting the form.</div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/td-meetup.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
